--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,45 +1,151 @@
 {
-  "editor.fontSize": 14,
-  "editor.fontFamily": "'Cascadia Code', 'Fira Code', Consolas, 'Courier New', monospace",
-  "editor.fontLigatures": true,
-  "editor.tabSize": 2,
-  "editor.insertSpaces": true,
-  "editor.detectIndentation": true,
-  "editor.wordWrap": "on",
-  "editor.minimap.enabled": true,
-  "editor.lineNumbers": "on",
-  "editor.renderWhitespace": "boundary",
-  "editor.formatOnSave": true,
-  "editor.defaultFormatter": null,
-  "editor.bracketPairColorization.enabled": true,
-  "editor.guides.bracketPairs": true,
+	// "workbench.editorAssociations": {
+	// 	"*.ipynb": "jupyter.notebook.ipynb"
+	// },
+	"[javascript]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"[javascriptreact]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"editor.formatOnSave": true,
+	"[python]": {
+		"editor.formatOnType": true
+	},
+	"[c]": {
+		"editor.formatOnSave": false
+	},
+	"launch": {
+		"configurations": [],
+		"compounds": []
+	},
+	"editor.mouseWheelZoom": true,
+	"[json]": {
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
+	},
+	"explorer.confirmDelete": false,
+	"prettier.useTabs": true,
+	"editor.tabSize": 2,
+	"workbench.colorTheme": "Sublime Monokai",
+	"workbench.sideBar.location": "right",
+	"workbench.colorCustomizations": {
+		"tab.activeBackground": "#393a32",
+		"tab.activeBorder": "#cbad2a",
+		"tab.activeBorderTop": "#cbad2a",
+		"tab.activeForeground": "#cbad2a",
+		"tab.inactiveBackground": "#272822",
+		"tab.hoverBackground": "#171717",
+		"statusBar.background": "#1e1f1c",
+		"statusBar.border": "#cbad2a"
+	},
+	//my settings for font and theme
+	"editor.tokenColorCustomizations": {
+		"[Sublime Monokai]": {
+			"textMateRules": [
+				{
+					"scope": ["meta.jsx.children.js"],
+					"settings": {
+						"foreground": "#ffffffeb",
+						"fontStyle": "italic"
+					}
+				},
+				{
+					"scope": [
+						"variable.other.readwrite.alias.js",
+						"variable.other.readwrite.js"
+					],
+					"settings": {
+						"foreground": "#FD971F",
+						"fontStyle": "bold"
+					}
+				},
+				{
+					"scope": ["variable.other.constant.js"],
+					"settings": {
+						"fontStyle": "bold"
+					}
+				},
+				{
+					"scope": [
+						"punctuation.section.embedded.begin.js",
+						"punctuation.section.embedded.end.js",
+						"variable.other.object.js"
+					],
+					"settings": {
+						"fontStyle": "bold underline"
+					}
+				},
 
-  "files.autoSave": "onFocusChange",
-  "files.trimTrailingWhitespace": true,
-  "files.insertFinalNewline": true,
-  "files.exclude": {
-    "**/.git": true,
-    "**/.DS_Store": true,
-    "**/node_modules": true,
-    "**/__pycache__": true,
-    "**/*.pyc": true
-  },
+				{
+					"scope": ["support.variable.property.js"],
+					"settings": {
+						"fontStyle": ""
+					}
+				}
 
-  "workbench.colorTheme": "Default Dark+",
-  "workbench.iconTheme": "vs-seti",
-  "workbench.startupEditor": "welcomePage",
-
-  "terminal.integrated.fontSize": 13,
-  "terminal.integrated.fontFamily": "'Cascadia Code', monospace",
-  "terminal.integrated.cursorStyle": "line",
-  "terminal.integrated.cursorBlinking": true,
-
-  "git.autofetch": true,
-  "git.confirmSync": false,
-  "git.enableSmartCommit": true,
-
-  "explorer.confirmDelete": false,
-  "explorer.confirmDragAndDrop": false,
-
-  "extensions.ignoreRecommendations": false
+				// 		{
+				// 			"scope": "variable.other.readwrite.js",
+				// 			"settings": {
+				// 				"foreground": "#f0efef",
+				// 				"fontStyle": "bold"
+				// 			}
+				// 		},
+				// 		{
+				// 			"scope": ["variable.parameter.js"],
+				// 			"settings": {
+				// 				"foreground": "#FD971F",
+				// 				"fontStyle": "italic"
+				// 			}
+				// 		},
+				// 		{
+				// 			"scope": ["variable.other.object.js"],
+				// 			"settings": {
+				// 				"foreground": "#a7a96d",
+				// 				"fontStyle": "bold"
+				// 			}
+				// 		},
+				// 		{
+				// 			"scope": ["variable.other.property.js"],
+				// 			"settings": {
+				// 				"foreground": "#e1e495",
+				// 				"fontStyle": "italic"
+				// 			}
+				// 		},
+				// 		{
+				// 			"scope": ["entity.name.function.js"],
+				// 			"settings": {
+				// 				"foreground": "#fc8888",
+				// 				"fontStyle": "italic"
+				// 			}
+				// 		},
+				// 		{
+				// 			"scope": ["comment.line.double-slash.js"],
+				// 			"settings": {
+				// 				"foreground": "#ABB2BF",
+				// 				"fontStyle": "italic underline"
+				// 			}
+				// 		},
+				// 		{
+				// 			"scope": ["string", "punctuation.definition.string"],
+				// 			"settings": {
+				// 				"foreground": "#83e63c",
+				// 				"fontStyle": "italic"
+				// 			}
+				// 		}
+			]
+		}
+	},
+	"gitlens.defaultDateLocale": null,
+	"cmake.configureOnOpen": false,
+	"nxConsole.showNodeVersionOnStartup": false,
+	"extensions.ignoreRecommendations": true,
+	"security.allowedUNCHosts": ["wsl.localhost"],
+	"editor.minimap.enabled": false,
+	"git.autofetch": true,
+	"git.enableSmartCommit": true,
+	"git.confirmSync": false,
+	"github.copilot.nextEditSuggestions.enabled": true,
+	"editor.unicodeHighlight.invisibleCharacters": false,
+	"chat.viewSessions.orientation": "stacked",
+	"claudeCode.preferredLocation": "panel"
 }
