Update README and configuration files for Micro editor integration and Oh My Zsh enhancements

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-	name = Paul Shivers
-	email = PaulSShivers@gmail.com
+	name = PShivers
+	email = paulsshivers@gmail.com
 
 [core]
 	editor = micro
